rabbitmq/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rabbitmq
  labels:
    app: rabbitmq
  namespace: rabbitmq
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rabbitmq
  template:
    metadata:
      labels:
        app: rabbitmq
    spec:
      containers:
      - name: rabbitmq
        image: rabbitmq:3.9.11
        ports:
        - containerPort: 5672
        - containerPort: 15672  # Management UI port
        resources:
          requests:
            memory: "256Mi"    # Request 256 MB of memory
            cpu: "100m"        # Request 100 milliCPU (0.1 CPU)
          limits:
            memory: "512Mi"    # Limit to 512 MB of memory
            cpu: "200m"        # Limit to 200 milliCPU (0.2 CPU)
