rabbitmq/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq
  labels:
    app: rabbitmq
  namespace: rabbitmq
spec:
  ports:
    - port: 5672
      targetPort: 5672
  selector:
    app: rabbitmq
---
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq-ui
  labels:
    app: rabbitmq-ui
  namespace: rabbitmq
spec:
  ports:
    - port: 80
      targetPort: 15672
      name: ui
    - port: 15692
      targetPort: 15692
      name: metrics
  selector:
    app: rabbitmq
