rabbitmq/ingress-route.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: rabbitmq-ingress-route
  namespace: rabbitmq
spec:
  entryPoints:
  - web
  routes:
  - kind: Rule
    match: Host(`rabbitmq-ui.mw`)
    priority: 10
    services:
    - name: rabbitmq-ui
      port: 80
---
apiVersion: traefik.io/v1alpha1
kind: IngressRouteTCP
metadata:
  name: rabbitmq-amqp
  namespace: rabbitmq
spec:
  entryPoints:
    - amqp
  routes:
    - match: HostSNI(`*`) # rabbitmq.mw
      services:
        - name: rabbitmq
          port: 5672
